# kakap-io

./: .dockerignore  .gitattributes  Cargo.toml  Dockerfile  openapi.yaml
.gcloud/cloudbuild/: any.yaml  master.yaml
assets/: index.html
assets/javascripts/: index.js
client/: package-lock.json  package.json
client/src/: App.vue  router.js
client/src/components/: Begin.vue  Home.vue  NavMenu.vue
public/: index.html
server/: Cargo.toml
server/src/: chainable.rs  error.rs  main.rs
src/: main.rs
