[package]
name = "kakap-io"
version = "0.1.0"
authors = ["Philippe Vinchon <p.vinchon@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.4"
rocket_contrib = { version = "0.4.4", features = ["serve"] }
