[package]
name = "server"
version = "0.1.0"
authors = ["Philippe Vinchon <p.vinchon@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.31"
bytes = "0.5"
futures = "0.3"
http = "0.2"
hyper = "0.13"
hyper-tls = "0.4.1"
rocket = "0.4.4"
rocket_contrib = { version = "0.4.4", features = ["serve"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dev-dependencies]
rand = "0.7.3"
tokio = { version = "0.2", features = ["full"] }
